# metadata-parser

./: blueprint.py  function_app.py  pyproject.toml
.github/workflows/: main_metadata-extractor-function.yml  main_metadata-parser-v2.yml  main_metadata-parser.yml
event_producers/: base_producer.py  files_producer.py
extractors/: combox_extractor.py  gin_container_extractor.py  metadata_extractor.py  speech_extractor.py
factories/: file_extractor_factory.py
metadata_parser/: event_extractor.py
models/: models.py
tests/unit/: test_function_app.py
tests/unit/extractors/: test_extractors.py
tests/unit/fixtures/: regex_fixtures.py
