[tool.poetry]
name = "metadata-parser"
version = "0.1.0"
description = "placeholder desc"
authors = ["Pleava, Dorin <dorin.pleava@porsche-engineering.ro>"]
readme = "README.md"
packages = [{include = "metadata_parser"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
azure-functions = "^1.19.0"
azure-eventhub = "^5.11.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
